--- a/bookings.html
+++ b/bookings.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> Responsive Sidebar Menu  | CodingLab </title>
+    <title> ntpacifico.com | IT Support</title>
     <link rel="stylesheet" href="style.css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
@@ -26,12 +26,12 @@
          <span class="tooltip">Home</span>
       </li>
       <li>
-       <a href="bookings.html">
-        <i class='bx bx-calendar' ></i>
-         <span class="links_name">Bookings</span>
-       </a>
-       <span class="tooltip">Bookings</span>
-     </li>
+        <a href="bookings.html">
+         <i class='bx bx-calendar' ></i>
+          <span class="links_name">Book A Call</span>
+        </a>
+        <span class="tooltip">Book A Call</span>
+      </li>
      <li>
        <a href="forms.html">
         <i class='bx bx-phone' ></i>
