--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      </li>
 
      <li>
-       <a href="forms.html">
+       <a href="#">
         <i class='bx bx-phone' ></i>
          <span class="links_name">Contact Us</span>
        </a>
@@ -55,7 +55,7 @@
   
   <section class="home-section">
       
-    <h2>Home</h2>
+    <h2>Online Appointment</h2>
     
   </section>
 
